# client

./: .gitignore  Cargo.toml  config.json  supported_games.json  supported_providers.json  thor_hit_the_bonus.json
configs/: china_festival.json  coin_lamp.json  config.json  gladius.json  gladius_death_or_glory.json  history.txt  hold_and_win.json  supported_games.json  supported_providers.json  three_aztec_temples.json
playwright/: octoplay.js  package-lock.json  package.json
src/: main.rs  storage.rs
src/bng/: china_festival.rs  mod.rs  network.rs
src/enj/: china_festival.rs  mod.rs  thor.rs
src/enj copy/: china_festival.rs  mod.rs  network.rs
src/hacksaw/: gladius.rs  mod.rs  network.rs
src/octo/: hold_and_win.rs  mod.rs  network.rs
