[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.1", features = ["v4"] }
rand = "0.8"
select = "0.6"
anyhow    = "1.0"
url      = "2"
chrono = "0.4"
regex = "1"
tokio-tungstenite = "0.21"
futures-util = "0.3"
ctrlc = "3"