[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.23", features = ["blocking", "json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.0", features = ["v4"] }
rand = "0.9.2"
select = "0.6"
anyhow    = "1.0.99"
url      = "2.5.7"
chrono = "0.4"
regex = "1.11.2"
tokio-tungstenite = "0.27.0"
futures-util = "0.3"
ctrlc = "3"
rustyline = "17.0.1"